# control-brightness

./: .gitignore  LICENSE  README.rst  control-brightness.cabal
app/: Main.hs  Options.hs
etc/zsh-completions/: _control-brightness
src/: Brightness.hs
